# PINNTest

./: .gitignore  CMakeLists.txt  README.md  ready.sh
code/: CMakeLists.txt
code/include/: network.h
code/src/: network.cpp
main/: CMakeLists.txt  test.cpp  test_vis.cpp  train.cpp
